Webet333_Desktop_216 Deposit Options Alignment isuue resolved

--- a/Code/Webet333.middleware/wwwroot/css2/style.css
+++ b/Code/Webet333.middleware/wwwroot/css2/style.css
@@ -3017,7 +3017,7 @@ label.bank-list-deposit {
 }
 
 .bank-selection ul {
-    display: -webkit-box;
+    display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
